Remove overflow-y: scroll; from body to avoid showing two scrollbars.

--- a/scss/base/elements.scss
+++ b/scss/base/elements.scss
@@ -10,9 +10,10 @@
 	box-sizing: border-box;
 }
 
+html { overflow-y: scroll; }
 
 html, body {
-	overflow-x: hidden; overflow-y: scroll;
+	overflow-x: hidden;
 	line-height: $base-line-height;
 	font-family: $base-font-primary;
 	font-size: $base-font-size;
